--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,4 +18,10 @@
         android:layout_height="wrap_content"
         android:layout_width="match_parent"/>
 
+    <Button
+        android:id="@+id/view_next"
+        android:text="@string/next"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"/>
+
 </LinearLayout>
