Cycle interval setting

--- a/app/src/main/res/layout/activity_control.xml
+++ b/app/src/main/res/layout/activity_control.xml
@@ -36,12 +36,25 @@
 
     <TextView
         android:text="@string/playback_mode"
+        android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
     <Spinner
         android:id="@+id/view_playback_mode"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:text="@string/cycle_interval"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <Spinner
+        android:id="@+id/view_cycle_interval"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
