--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -5,4 +5,14 @@
         <item>Shuffle</item>
         <item>Shuffle (No Animation)</item>
     </string-array>
+    <string-array name="cycle_interval">
+        <item>10 Seconds</item>
+        <item>30 Seconds</item>
+        <item>1 Minute</item>
+        <item>5 Minutes</item>
+        <item>15 Minutes</item>
+        <item>30 Minutes</item>
+        <item>1 Hour</item>
+        <item>Infinite</item>
+    </string-array>
 </resources>
