--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -5,6 +5,7 @@
         <item>Shuffle</item>
         <item>Shuffle (No Animation)</item>
     </string-array>
+
     <string-array name="cycle_interval">
         <item>10 Seconds</item>
         <item>30 Seconds</item>
@@ -14,5 +15,10 @@
         <item>30 Minutes</item>
         <item>1 Hour</item>
         <item>Infinite</item>
+    </string-array>
+
+    <string-array name="display_mode">
+        <item>Gallery</item>
+        <item>Clock</item>
     </string-array>
 </resources>
