--- a/app/src/main/res/layout/activity_ip_setup.xml
+++ b/app/src/main/res/layout/activity_ip_setup.xml
@@ -11,8 +11,8 @@
 
         <TextView
             android:text="@string/enter_ip_address"
-            android:layout_margin="16dp"
-            android:textSize="24sp"
+            android:layout_marginTop="24dp"
+            android:textSize="18sp"
             android:layout_centerHorizontal="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
