--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="grid_line_width">1dp</dimen>
+    <dimen name="toolbar_text_size">14sp</dimen>
 </resources>
