--- a/app/src/main/res/layout/activity_control.xml
+++ b/app/src/main/res/layout/activity_control.xml
@@ -44,7 +44,7 @@
                     android:layout_marginRight="24dp"
                     android:layout_height="wrap_content"
                     android:layout_width="wrap_content"
-                    tools:ignore="RtlHardcoded" />
+                    tools:ignore="ButtonStyle,RtlHardcoded" />
 
                 <Button
                     android:id="@+id/view_next"
@@ -56,7 +56,7 @@
                     android:minWidth="72dp"
                     android:layout_height="wrap_content"
                     android:layout_width="wrap_content"
-                    tools:ignore="RtlHardcoded" />
+                    tools:ignore="ButtonStyle,RtlHardcoded" />
 
             </LinearLayout>
 
@@ -66,6 +66,7 @@
 
                 <ImageView
                     android:id="@+id/view_brightness_low"
+                    style="?attr/actionButtonStyle"
                     android:src="@drawable/ic_brightness_low_black_48px"
                     android:layout_centerVertical="true"
                     android:layout_width="wrap_content"
@@ -87,6 +88,7 @@
 
                 <ImageView
                     android:id="@+id/view_brightness_high"
+                    style="?attr/actionButtonStyle"
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
                     android:src="@drawable/ic_brightness_high_black_48px"
