--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -29,4 +29,27 @@
         <item>Binary 1</item>
         <item>Binary 2</item>
     </string-array>
+
+    <integer-array name="palette">
+        <item>0xff000000</item>
+        <item>0xff7f7f7f</item>
+        <item>0xff870000</item>
+        <item>0xff7d8500</item>
+        <item>0xff008200</item>
+        <item>0xffff7422</item>
+        <item>0xff007fbb</item>
+        <item>0xff00003c</item>
+        <item>0xff926fff</item>
+        <item>0xff1e0082</item>
+        <item>0xffffffff</item>
+        <item>0xffc0c0c0</item>
+        <item>0xffff0000</item>
+        <item>0xffffff00</item>
+        <item>0xff00ff00</item>
+        <item>0xff32ffff</item>
+        <item>0xff4100ff</item>
+        <item>0xffff4cff</item>
+        <item>0xffffff6f</item>
+        <item>0xffff6e00</item>
+    </integer-array>
 </resources>
