--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,5 @@
 <resources>
     <dimen name="grid_line_width">1dp</dimen>
     <dimen name="toolbar_text_size">14sp</dimen>
+    <dimen name="swatch_elevation">4dp</dimen>
 </resources>
