--- a/app/src/main/res/layout/activity_ip_setup.xml
+++ b/app/src/main/res/layout/activity_ip_setup.xml
@@ -11,10 +11,13 @@
         android:layout_height="match_parent">
 
         <TextView
+            android:id="@+id/view_setup_title"
             android:text="@string/enter_ip_address"
             android:layout_marginTop="24dp"
+            android:gravity="center"
             android:layout_gravity="center_horizontal|top"
-            android:textSize="18sp"
+            android:lineSpacingExtra="3dp"
+            android:textSize="16sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
@@ -35,6 +38,7 @@
                 android:layout_height="wrap_content" />
 
             <TextView
+                android:id="@+id/view_discover_title"
                 android:text="@string/discover_game_frame_ip"
                 android:textSize="8dp"
                 android:layout_marginRight="64dp"
@@ -59,6 +63,30 @@
             android:layout_height="wrap_content"
             tools:ignore="RtlHardcoded" />
 
+        <com.dmitrymalkovich.android.ProgressFloatingActionButton
+            android:id="@+id/view_cancel_discover"
+            android:layout_gravity="bottom|right"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:clickable="true"
+            tools:ignore="RtlHardcoded">
+
+            <android.support.design.widget.FloatingActionButton
+                android:src="@drawable/ic_clear_white_48px"
+                android:layout_margin="16dp"
+                app:fabSize="normal"
+                app:backgroundTint="@color/colorPrimary"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <ProgressBar
+                style="@style/Widget.AppCompat.ProgressBar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+        </com.dmitrymalkovich.android.ProgressFloatingActionButton>
+
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/view_setup"
             android:src="@drawable/ic_done_white_48px"
@@ -71,31 +99,4 @@
 
     </android.support.design.widget.CoordinatorLayout>
 
-    <FrameLayout
-        android:id="@+id/view_setup_progress"
-        android:visibility="gone"
-        android:layout_margin="16dp"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <TextView
-            android:text="@string/trying_to_find_game_frame"
-            android:textSize="12sp"
-            android:gravity="center_horizontal"
-            android:layout_gravity="center_horizontal"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
-        <ProgressBar
-            android:layout_gravity="center"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
-        <TextView
-            android:id="@+id/view_setup_trying_current_ip"
-            android:layout_gravity="center_horizontal|bottom"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
-    </FrameLayout>
 </FrameLayout>
